imersão ux-design

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 <body>
     <header> 
-        <h1>EBAC Veggie</h1> 
-        <nav> 
+        <h1>EBAC Veggie</h1>
+        <nav>
             <ul>
-                <li><a href="#home">Início</a></li> 
-                <li><a href="./cardápio.html">Cardápio</a></li>
-                <li><a href="#about">Sobre Nós</a></li> 
-                <li><a href="#contact">Contato</a></li> 
-                <li><a href="#reservations">Reservas</a></li> 
-            </ul> 
-        </nav> 
+                <li><a href="#home">Início</a></li>
+                <li><a href="cardápio.html">Cardápio</a></li>
+                <li><a href="#about">Sobre Nós</a></li>
+                <li><a href="#contact">Contato</a></li>
+                <li><a href="#reservations">Reservas</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
@@ -78,7 +78,7 @@
                 <cite>- João P.</cite>
             </blockquote>
         </section>
-        
+
         <footer>
             <p>&copy; 2024 EBAC Veggie</p>
         </footer>
