--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href="#home">Início</a></li>
-                <li><a href="cardápio.html">Cardápio</a></li>
+                <li><a href="./cardápio.html">Cardápio</a></li>
                 <li><a href="#about">Sobre Nós</a></li>
                 <li><a href="#contact">Contato</a></li>
                 <li><a href="#reservations">Reservas</a></li>
