--- a/cardápio.html
+++ b/cardápio.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://unpkg.com/scrollreveal"></script>  <!--link to scroll reveal-->
+    <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="./stylecardapio.css">
-    <script src="./scriptcardapio.js"></script>
+    <script src="./scriptcardapio.js" defer></script>
     <title>Cardápio</title>
 </head>
 
